After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659807 - auth request contacts not included in contact list
auth request contacts not included in contact list
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Contact List
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-22 09:50 UTC by Xavier Claessens
Modified: 2011-09-26 10:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Wait for the store to be filled before loading events (2.40 KB, patch)
2011-09-23 09:04 UTC, Xavier Claessens
accepted-commit_after_freeze Details | Review

Description Xavier Claessens 2011-09-22 09:50:42 UTC
If a contact is asking my authorization, an even is created and the contact list blinks his status icon with a '?' icon. But if I'm not showing offline contacts, it is filtered out and I can't see it.

I think it should be visible even if showing only online contacts.
Comment 1 Guillaume Desmottes 2011-09-22 12:45:09 UTC
Agreed. Actually this is probably true for any kind of event.
Comment 2 Xavier Claessens 2011-09-22 13:41:02 UTC
According to the code, it is already supposed to work like that. The problem is the event is added before the contact list is populated, so in EmpathyMainWindow::increase_event_count() it does not find the contact to increase the EMPATHY_INDIVIDUAL_STORE_COL_EVENT_COUNT value.

So this bug is happening only when starting empathy when accounts are already online with a contact subscribe=ask.
Comment 3 Xavier Claessens 2011-09-23 09:04:07 UTC
Created attachment 197327 [details] [review]
Wait for the store to be filled before loading events
Comment 4 Guillaume Desmottes 2011-09-23 10:54:02 UTC
Comment on attachment 197327 [details] [review]
Wait for the store to be filled before loading events

Looks good; we'll merge after the 3.2 release.
Comment 5 Xavier Claessens 2011-09-26 10:38:43 UTC
pushed in master, for 3.4