Wait for the store to be filled before loading events

https://bugzilla.gnome.org/show_bug.cgi?id=659807